# Helios_Parser

./: .gitignore  README.md  STARTUP_MANUAL.md  coordinate_model_final_validation_report.md  hed_helios_cold_electronic_baseline_core.json  phase412_production_gate_report.md  phase412c_snapshot_performance_report.md  phase41_hotfix_report.md  plasmon_phase8_verification_report.md  plasmon_step7_validation_report.md  pyproject.toml  status.md  tmp_nrl_extract.txt  validation_report.md
docs/: architecture_extension.md  bpf_deep_forensic_analysis.md  bpf_format_investigation.md  bpf_full_field_map_and_parser_plan.md  bpf_h5d_schema.md  developer-guide.html  developer-testing.html  future-development.html  index.html  log_bpf_exo_field_comparison.md  maintenance.html  packaging.md  plasmon_xrts_observable.md  release-notes.html  user-guide.html  v1_code_health_audit.md
outputs/: debug_viewer_payloads_suite.py  trace_viewer_payloads_run.py  wave7_baseline_retest.txt
release_assets/: README_FIRST.md  Run_HELIOS_Analyzer.ps1  run_helios_analyzer.sh
scripts/: _script_bootstrap.py  _validation_common.py  audit_plasmon_driven_framework.py  bench_hdf5_access.py  bench_streaming_conversion.py  bench_wave5_reuse.py  bench_wave6_derived.py  benchmark_plasmon_article_cases.py  benchmark_plasmon_article_native_observable.py  benchmark_plasmon_experimental_response_model.py  benchmark_plasmon_higher_level_model_jump.py  benchmark_plasmon_new_backend_experiment.py  benchmark_plasmon_response_model_scaffold.py  benchmark_plasmon_response_shape_experiment.py  build_dataset_registry.py  (+40 more)
(+469 files in other folders)
